--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "jquery": "^3.5.1",
     "mocha": "^8.1.3",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
     "pdfmake": "^0.1.68",
+    "request": "^2.88.2",
     "shelljs": "^0.8.4"
   }
 }
