--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "form-data": "^3.0.0",
     "jquery": "^3.5.1",
     "mocha": "^8.1.3",
+    "morgan": "^1.10.0",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
