--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.5.1",
     "mocha": "^8.1.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
