--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-data": "^3.0.0",
     "jquery": "^3.5.1",
     "mocha": "^8.1.3",
+    "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
