--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "form-data": "^3.0.0",
